<?xml version = "1.0" encoding="utf-8" ?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="16dp">

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="64dp"
            android:fontFamily="@font/ys_display"
            android:text="@string/Settings"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00FFFFFF"
            app:icon="@drawable/arrow_back_icon"
            app:iconTint="@color/black" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <Switch
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginTop="45dp"
            android:fontFamily="@font/ys_display"
            android:paddingTop="21dp"
            android:paddingBottom="21dp"
            android:text="@string/dark_theme"
            android:textColor="@color/black"
            android:gravity="center_vertical"
            android:textSize="@dimen/primary_text_size"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <Button
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:backgroundTint="#00FFFFFF"
            android:fontFamily="@font/ys_display"
            android:gravity="left|center_vertical"
            android:paddingLeft="0dp"
            android:paddingTop="21dp"
            android:paddingBottom="21dp"

            android:text="@string/share"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/primary_text_size"
            app:icon="@drawable/share_icon"
            app:iconGravity="end"
            app:iconTint="@color/grey" />

        <Button
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:backgroundTint="#00FFFFFF"
            android:fontFamily="@font/ys_display"
            android:gravity="left|center_vertical"
            android:paddingLeft="0dp"
            android:paddingTop="21dp"
            android:paddingBottom="21dp"

            android:text="@string/support"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/primary_text_size"
            app:icon="@drawable/support_icon"
            app:iconGravity="end"
            app:iconTint="@color/grey"/>

        <Button
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:backgroundTint="#00FFFFFF"
            android:fontFamily="@font/ys_display"
            android:gravity="left|center_vertical"
            android:paddingLeft="0dp"
            android:paddingTop="21dp"
            android:paddingBottom="21dp"

            android:text="@string/ligal"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/primary_text_size"
            app:icon="@drawable/arrow_forward_icon"
            app:iconGravity="end"
            app:iconTint="@color/grey"/>



    </LinearLayout>
</LinearLayout>
