<?xml version = "1.0" encoding="utf-8" ?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3772E7"
    android:orientation="vertical"
    android:padding="14dp">
    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:fontFamily="@font/ys_display"
            android:text="@string/app_name"
            android:textColor="#FFFFFF"
            android:textSize="22sp"
            android:layout_marginBottom="26dp"
            android:textStyle="bold"
            />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <Button
            android:id="@+id/search"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/ys_display"
            android:text="@string/search"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="22dp"
            app:cornerRadius="16dp"
            app:icon = "@drawable/search_icon"
            app:iconGravity = "textStart"
            app:iconPadding = "10dp"
            app:iconTint = "@color/black"
            android:layout_marginTop="16dp"
            />

        <Button
            android:id="@+id/media"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/Media"
            android:textAllCaps="false"
            android:textSize="22dp"
            android:fontFamily="@font/ys_display"
            android:textColor="@color/black"
            app:cornerRadius="16dp"
            app:icon = "@drawable/media_icon"
            app:iconGravity = "textStart"
            app:iconPadding = "10dp"
            app:iconTint = "@color/black"
            android:layout_marginTop="16dp"
            />
        <Button
            android:id="@+id/setting"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/Settings"
            android:textAllCaps="false"
            android:textSize="22dp"
            android:fontFamily="@font/ys_display"
            android:textColor="@color/black"
            app:cornerRadius="16dp"
            app:icon = "@drawable/settings_icon"
            app:iconGravity = "textStart"
            app:iconPadding = "10dp"
            app:iconTint = "@color/black"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="14dp"
            />
    </LinearLayout>

</LinearLayout>
